--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ body{
   width: calc(100vw - 20px);
   height: calc(100vh - 50px);
   padding: 10px;
+  position: relative;
 }
 
 #bar-options{
@@ -109,6 +110,16 @@ body{
   cursor: pointer;
 }
 
+.datos_html{
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+.datos_html:before{
+  content: "Creado por Marco Antonio Tavares Rodriguez"
+}
+
 .operaciones-datos{
   width: 100%;
   border-collapse: collapse;
@@ -166,5 +177,8 @@ body{
   #input-datos, #operaciones {
     width: calc(100% - 10px) !important;
     padding: 0px;
+  }
+  .datos_html{
+    position: initial;
   }
 }
